2021-11-19
+improved console outputs
+updated readme.txt
#fixed frequent jumping between download and converting phase
#also find existing hentai in ./hentai/
#fixed datetime printout not refreshing

2021-11-18
#catched ConnectionError
#fixed timeout exception catching
+save PDF in ./hentai/ if more than 10 hentai in list to download
#forbid tabulator and newline in titles

2021-11-17
+updated readme.txt
#fixed frequent jumping between download and converting phase
#fixed crash after loading certain images
+retry deleting temporary image folder after downloading and converting everything
+added changelog.txt
#catched index out of range errors
+number of finished hentai / number of all hentais
#limit title to 140 characters
+don't redownload and convert already existing hentai

2021-11-16
+timeouts
+if image file is corrupt, redownload
#fixed freezing during image download
+load hentai ID from file ./downloadme.txt

2021-11-15
+select 1 or multiple hentai by ID
+download jpg
+convert to PDF