@@ -4,6 +4,7 @@
 #fixed frequent jumping between download and converting phase
 #also find existing hentai in ./hentai/
 #fixed datetime printout not refreshing
++added pause at program end so window doesn't close automatically
 
 2021-11-18
 #catched ConnectionError
